--- a/Assets/SearchIcon.uss
+++ b/Assets/SearchIcon.uss
@@ -1,8 +1,8 @@
 #SearchIcon {
     background-color: rgba(255, 255, 255, 0);
-    background-image: url("project://database/Assets/UI%20Toolkit/UnityThemes/UnityDefaultRuntimeTheme.tss?fileID=-6090568113533005507&guid=514b4cd8ab0df6d15a8ebeb27f1eb05a&type=3#check");
-    width: 25px;
-    height: 25px;
+    background-image: url("project://database/Assets/icons8-search-90.png?fileID=2800000&guid=65e9b4d5f3305851e87840c860d28d54&type=3#icons8-search-90");
+    width: 10%;
+    height: auto;
     -unity-background-scale-mode: scale-to-fit;
     -unity-background-image-tint-color: rgb(255, 255, 255);
     -unity-text-align: upper-left;
