--- a/Assets/UI Toolkit/MainRuntimeUI/MainRuntimeUI.uxml
+++ b/Assets/UI Toolkit/MainRuntimeUI/MainRuntimeUI.uxml
@@ -1,7 +1,7 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/SearchIcon.uss?fileID=7433441132597879392&amp;guid=01da09dedecbd6fe48cdc82c58ec6c51&amp;type=3#SearchIcon" />
     <ui:VisualElement name="FullVisualElement" style="flex-grow: 1; align-items: stretch; justify-content: flex-end; align-self: stretch;">
-        <ui:Button display-tooltip-when-elided="true" name="SearchButton" enable-rich-text="false" style="color: rgb(31, 31, 31); background-color: rgb(16, 16, 16); border-top-width: 0; border-right-width: 0; border-bottom-width: 0; border-left-width: 0; margin-top: 0; margin-right: 0; margin-bottom: 0; margin-left: 0;">
+        <ui:Button display-tooltip-when-elided="true" name="SearchButton" enable-rich-text="false" style="color: rgb(31, 31, 31); background-color: rgb(16, 16, 16); border-top-width: 0; border-right-width: 0; border-bottom-width: 0; border-left-width: 0; margin-top: 0; margin-right: 0; margin-bottom: 0; margin-left: 0; height: 10%;">
             <ui:VisualElement name="SearchIcon" style="flex-grow: 1;" />
         </ui:Button>
     </ui:VisualElement>
